src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP012_UP012.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 21
  fix:
    content: "b\"foo\""
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 21
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 18
  fix:
    content: "b\"foo\""
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 18
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 14
  fix:
    content: "b\"foo\""
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 14
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 20
  fix:
    content: "b\"foo\""
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 20
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 22
  fix:
    content: "b\"foo\""
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 22
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 30
  fix:
    content: "b\"foo\""
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 30
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 8
    column: 0
  end_location:
    row: 14
    column: 1
  fix:
    content: "b\"\"\"\nLorem\n\nIpsum\n\"\"\""
    location:
      row: 8
      column: 0
    end_location:
      row: 14
      column: 1
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 26
    column: 0
  end_location:
    row: 26
    column: 27
  fix:
    content: ""
    location:
      row: 26
      column: 19
    end_location:
      row: 26
      column: 26
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 44
    column: 0
  end_location:
    row: 44
    column: 31
  fix:
    content: ""
    location:
      row: 44
      column: 23
    end_location:
      row: 44
      column: 30
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 46
    column: 0
  end_location:
    row: 46
    column: 39
  fix:
    content: ""
    location:
      row: 46
      column: 23
    end_location:
      row: 46
      column: 38
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 48
    column: 0
  end_location:
    row: 48
    column: 24
  fix:
    content: "br\"foo\\o\""
    location:
      row: 48
      column: 0
    end_location:
      row: 48
      column: 24
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 49
    column: 0
  end_location:
    row: 49
    column: 22
  fix:
    content: "b\"foo\""
    location:
      row: 49
      column: 0
    end_location:
      row: 49
      column: 22
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 50
    column: 0
  end_location:
    row: 50
    column: 24
  fix:
    content: "bR\"foo\\o\""
    location:
      row: 50
      column: 0
    end_location:
      row: 50
      column: 24
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 51
    column: 0
  end_location:
    row: 51
    column: 22
  fix:
    content: "b\"foo\""
    location:
      row: 51
      column: 0
    end_location:
      row: 51
      column: 22
  parent: ~
- kind:
    UnnecessaryEncodeUTF8: ~
  location:
    row: 52
    column: 6
  end_location:
    row: 52
    column: 20
  fix:
    content: "b\"foo\""
    location:
      row: 52
      column: 6
    end_location:
      row: 52
      column: 20
  parent: ~

