src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP018_UP018.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    NativeLiterals: Str
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 5
  fix:
    content: "\"\""
    location:
      row: 20
      column: 0
    end_location:
      row: 20
      column: 5
  parent: ~
- kind:
    NativeLiterals: Str
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 10
  fix:
    content: "\"foo\""
    location:
      row: 21
      column: 0
    end_location:
      row: 21
      column: 10
  parent: ~
- kind:
    NativeLiterals: Str
  location:
    row: 22
    column: 0
  end_location:
    row: 23
    column: 7
  fix:
    content: "\"\"\"\nfoo\"\"\""
    location:
      row: 22
      column: 0
    end_location:
      row: 23
      column: 7
  parent: ~
- kind:
    NativeLiterals: Bytes
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 7
  fix:
    content: "b\"\""
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 7
  parent: ~
- kind:
    NativeLiterals: Bytes
  location:
    row: 25
    column: 0
  end_location:
    row: 25
    column: 13
  fix:
    content: "b\"foo\""
    location:
      row: 25
      column: 0
    end_location:
      row: 25
      column: 13
  parent: ~
- kind:
    NativeLiterals: Bytes
  location:
    row: 26
    column: 0
  end_location:
    row: 27
    column: 7
  fix:
    content: "b\"\"\"\nfoo\"\"\""
    location:
      row: 26
      column: 0
    end_location:
      row: 27
      column: 7
  parent: ~

